updated to multidrones example